# historical_fashion_aesthetics

./: .gitignore  README.md  classifier_preprocess.py  classifier_preprocess2.py  create_classifier.py  debug_color_counts.py  df_spacy.csv  embedding_classifier.py  embedding_classifier_jup.ipynb  fashion_gender_classifier_2.ipynb  fashion_results.csv  friapr11.py  gender_masking.ipynb  image_extract.py  parquet_analysis.py  parquet_analysis_2.ipynb  process_texts.py  pyproject.toml  train_classifier.py
notebooks/: booknlp_gender_debug.ipynb  eda.ipynb  fashion_gender_classifier.ipynb  hathitrust.ipynb
slurm/: debug.sh  single.sh
src/fashion/: adj_extraction.py  align_gold_coref.py  character_fashion_cooc.py  characters.py  count_sentences.py  distributed.py  extract_adjectives.py  extract_paragraphs.py  filter_char_adjectives.py  filter_texts.py  get_contexts.py  paths.py  process_texts.py  sources.py  span_utils.py  synsets.py  train_classifier.py  utils.py
src/fashion/analysis/: README.md  black_fashion.py  colors.py  gender_classifier.py
src/fashion/hathi/: strip_headers.py
src/fashion/pipeline/: run.py
src/fashion/pipeline/steps/: extract_adjectives.py  extract_char_fashion_mentions.py  extract_entity_mentions.py  extract_fashion_mentions.py  extract_pronouns.py  filter_fashion_mentions.py  finalize_outputs.py  run_booknlp.py  run_wearing_model.py
src/fashion/wearing/: __init__.py  annotations.py  bert.py  eval.py  llm.py  test.py  test_llm.py
