[project]
authors = [{name = "Naitian Zhou", email = "naitian@naitian.org"}]
description = "Add a short description here"
name = "fashion"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["ray>=2.44.1,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["nvidia/label/cuda-12.4.0", "nvidia", "conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
fashion = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
nltk = ">=3.9.1,<4"
ipython = ">=9.0.2,<10"
ipdb = ">=0.13.13,<0.14"
spacy = ">=3.8.2,<4"
pip = ">=25.0.1,<26"
transformers = "*"
cuda = {version = "*", channel="nvidia/label/cuda-12.4.0"}
pytorch = {version = "2.*", channel="pytorch"}
torchvision = {channel="pytorch"}
pytorch-cuda = {channel="pytorch"}
scikit-learn = ">=1.6.1,<2"
sentencepiece = ">=0.2.0,<0.3"
accelerate = ">=1.5.2,<2"
