[project]
authors = [{name = "Naitian Zhou", email = "naitian@naitian.org"}]
description = "Add a short description here"
name = "fashion"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["ray>=2.44.1,<3", "pyloess>=0.1.0,<0.2", "little-mallet-wrapper>=0.5.0,<0.6", "stanza>=1.10.1,<2", "krippendorff>=0.8.1,<0.9"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["nvidia/label/cuda-12.4.0", "nvidia", "conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
fashion = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
nltk = ">=3.9.1,<4"
ipython = ">=9.0.2,<10"
ipdb = ">=0.13.13,<0.14"
spacy = ">=3.8.2,<4"
pip = ">=25.0.1,<26"
transformers = "*"
cuda = {version = "*", channel="nvidia/label/cuda-12.4.0"}
numpy = "==2.0.0"
llm = ">=0.25,<0.26"
pydantic = ">=2.11.4,<3"
pytest = ">=8.4.0,<9"

[tool.pixi.feature.modern.dependencies]
pytorch = {version = "2.*", channel="pytorch"}
torchvision = {channel="pytorch"}
pytorch-cuda = {channel="pytorch"}
scikit-learn = ">=1.6.1,<2"
sentencepiece = ">=0.2.0,<0.3"
accelerate = ">=1.5.2,<2"
jupyter = ">=1.1.1,<2"
notebook = ">=7.4.0,<8"
seaborn = ">=0.13.2,<0.14"
matplotlib = ">=3.10.1,<4"
peft = "*"

[tool.pixi.feature.booknlp.dependencies]
cuda = {version = "*", channel="nvidia/label/cuda-12.4.0"}
ipython = ">=9.0.2,<10"
ipdb = ">=0.13.13,<0.14"

[tool.pixi.feature.booknlp.pypi-dependencies]
booknlp = "*"


[tool.pixi.environments]
default = ["modern"]
booknlp = ["booknlp"]
